# AsioBase

./: CMakeLists.txt  ConnManager.cpp  ConnManager.h  ConnManager.hpp  IoServicePool.cpp  IoServicePool.h  IoServicePool.hpp  MidTradeGate.vcxproj  MidTradeGate.vcxproj.filters  MidTradeServer.h  TcpConnectBase.cpp  TcpConnectBase.h  TcpConnectBase.hpp  main.cpp  test.txt
Debug/MidTradeGate.tlog/: CL.read.1.tlog  CL.write.1.tlog  MidTradeGate.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DebugBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  server1
Release/MidTradeGate.tlog/: CL.read.1.tlog  CL.write.1.tlog  MidTradeGate.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ReleaseBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  server1
x64/Release/MidTradeGate.tlog/: CL.command.1.tlog  MidTradeGate.lastbuildstate
